Extracted clusters library
Extracted a library called `clusters`. That library forms the core of
this one. It provides all the traits used by DBSCAN, and can be used to
build other distance based clustering algorithms with the same
general constraints.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,4 @@ version = "0.1.0"
 authors = ["Alan Kavishe <alan@filteris.co.za>"]
 
 [dependencies]
-
-[lib]
-doctest = false
+clusters = { git = "https://github.com/savish/clusters" }
