--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 authors = ["Alan Kavishe <alan@filteris.co.za>"]
 
 [dependencies]
-clusters = { git = "https://github.com/savish/clusters" }
+clusters = { path = "../clusters" }
