--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "dbscan"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Alan Kavishe <alan@filteris.co.za>"]
+edition = "2018"
 
 [dependencies]
 clusters = { git = "https://github.com/savish/clusters" }
