--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "dbscan"
-version = "0.2.0"
-authors = ["Alan Kavishe <alan@filteris.co.za>"]
-edition = "2018"
+version = "0.9.0"
+authors = ["Alan Kavishe <afksavish@gmail.com>"]
+edition = "2021"
 
 [dependencies]
-clusters = { git = "https://github.com/savish/clusters" }
+clusters = { git = "https://github.com/savish/clusters", tag = "v1.0.0" }
